Restauration de la classe TestFichier en raison d'un louper dans les commits de la part de Erwan THIERRY